Fix. Aligned the nav bar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,11 @@ nav ul li button
     
 }
 
+.nav-buttons
+{
+    margin-right: 1.5%;
+}
+
 fieldset
 {
     border: 0;
